                            CHANGES IN VERSION 0.10.1 (Novembere 2020)
                            
USER LEVEL CHANGES

-- Add `round` argument to `samplesSummary` (PR #1077).

-- `samplesSummary` function (and also `runMCMC(..., summary = TRUE)`) was made to be robust against non-valid values in posterior samples array (PR #1075).

-- Addition of a new `posterior_predictive_branch` MCMC sampler, which is automatically assigned to trailing dependency node networks of entirely non-data nodes (jointly posterior predictive branches).  This sampler simulates jointly from the predictive distribtion of these posterior predictive node branches, and is designed to improve MCMC mixing of the branch, and consequently of the entire model.

BUG FIXES

-- Fix `makeParamInfo` when there is only one declID involved to address a bug affecting usage of `getParam`. This bug was introduced in version 0.10.0 when reducing memory use of `getParam` (PR #1016). This fixes incorrect behavior of conjugate samplers (because of incorrect inputs from `getParam`) under certain model structures, in particular state-space style models (PR #1080). 

-- Prevent usage of marginal version of WAIC (i.e., when not monitoring all direct stochastic parents of data nodes); use of marginal version of WAIC in previous versions gave incorrect results (PR #1083).

DEVELOPER LEVEL CHANGES

-- Deprecate `samplerAssignmnentRules` system (PR #1078).

-- Deprecate `autoBlock` MCMC option (PR #1079).

                            CHANGES IN VERSION 0.10.0 (October 2020)

USER LEVEL CHANGES

-- Greatly extend BNP functionality with the CRP (Chinese restaurant process)
   distribution by allowing multiple observations to be grouped together (e.g.,
   for longitudinal or time series data) without requiring they be specified
   as a multivariate node (PR #1033).

-- Add a variety of conjugate cases to BNP conjugate samplers (PR #1033).

-- Greatly improve efficiency of model and MCMC building and configuration for